--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Run AI Bot
 on:
   schedule:
   # * is a special character in YAML so you have to quote this string
-  - cron: '*/5 * * * *'
+  - cron: '0 */24 * * *'
 
 jobs:
   fetchDataAndRunAI:
