--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Run AI Bot
 
 on:
-  schedule:
+  #schedule:
   # * is a special character in YAML so you have to quote this string
-  - cron: '0 */24 * * *'
+  #- cron: '0 */24 * * *'
 
 jobs:
   fetchDataAndRunAI:
